force-app/main/default/objects/Credit_Check__c/Credit_Check__c.object-meta.xml
<CustomObject>
    <description>Stores results of credit checks (manual or via external API) for a loan application.</description>
    <label>Credit Check</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Credit Check Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Checks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>