force-app/main/default/objects/Credit_Check__c/fields/Checked_Date__c.field-meta.xml
<CustomField>
    <fullName>Checked_Date__c</fullName>
    <description>Date and time when credit check was performed.</description>
    <label>Checked Date</label>
    <type>DateTime</type>
</CustomField>