force-app/main/default/objects/Credit_Check__c/fields/Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Loan application associated with this credit check.</description>
    <label>Loan Application</label>
    <referenceTo>Loan_Application__c</referenceTo>
    <relationshipLabel>Credit Checks</relationshipLabel>
    <relationshipName>Credit_Checks</relationshipName>
    <type>Lookup</type>
</CustomField>