force-app/main/default/objects/Credit_Check__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>Credit score retrieved from credit bureau.</description>
    <label>Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>