force-app/main/default/objects/Credit_Check__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Source of credit check(e.g. Experian, CIBIL, Mock API).</description>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>